--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Simply Recipes | Home</title>
 </head>
 <body>
@@ -77,14 +77,7 @@
     <div class="footer-copy-right">© 2025 <span class="footer-simply-recipes">SimplyRecipes</span> Built by <span class="ibrahim">Ibrahim Abu-Assad</span></div>
 </footer>
 
-<script>
-const menuToggle = document.querySelector('.menu-toggle');
-const navList = document.querySelector('.list-nav');
-
-menuToggle.addEventListener('click', () => {
-  navList.classList.toggle('show');
-});
-</script>
+<script src="app.js"></script>
 
 </body>
 </html>
